Fix run meta