@@ -23,25 +23,22 @@ public class RunMeta extends BaseMetaDefinition implements MetaResolver {
     return true;
   }
 
+  private ConcreteExpression applyLater(ConcreteFactory factory, ConcreteExpression arg) {
+    return factory.app(factory.meta("later", new LaterMeta(false)), true, arg);
+  }
+
   private ConcreteExpression getConcreteRepresentation(ContextData contextData) {
     List<? extends ConcreteExpression> args = Utils.getArgumentList(contextData.getArguments().getFirst().getExpression());
     ConcreteFactory factory = contextData.getFactory();
-    ConcreteExpression result = args.getLast();
-    for (int i = args.size() - 1; i >= 0; i--) {
-      if (i <= args.size() - 2) {
-        ConcreteExpression arg = args.get(i);
-        if (arg instanceof ConcreteLetExpression let && let.getExpression() instanceof ConcreteIncompleteExpression) {
-          result = factory.letExpr(let.isHave(), let.isStrict(), let.getClauses(), result);
-        } else if (arg instanceof ConcreteLamExpression && ((ConcreteLamExpression) arg).getBody() instanceof ConcreteIncompleteExpression) {
-          result = factory.lam(((ConcreteLamExpression) arg).getParameters(), result);
-        } else {
-          result = factory.app(arg, true, Collections.singletonList(result));
-        }
-      }
-      if (i > 0) {
-        ConcreteExpression later = factory.meta("later", new LaterMeta());
-        ConcreteExpression dollar = factory.meta("$", new ApplyMeta());
-        result = factory.binOpSequence(List.of(later, dollar, result));
+    ConcreteExpression result = applyLater(factory, args.getLast());
+    for (int i = args.size() - 2; i >= 0; i--) {
+      ConcreteExpression arg = args.get(i);
+      if (arg instanceof ConcreteLetExpression let && let.getExpression() instanceof ConcreteIncompleteExpression) {
+        result = factory.letExpr(let.isHave(), let.isStrict(), let.getClauses(), result);
+      } else if (arg instanceof ConcreteLamExpression && ((ConcreteLamExpression) arg).getBody() instanceof ConcreteIncompleteExpression) {
+        result = factory.lam(((ConcreteLamExpression) arg).getParameters(), result);
+      } else {
+        result = applyLater(factory, factory.app(arg, true, Collections.singletonList(result)));
       }
     }
     return result;
@@ -49,16 +46,7 @@ public class RunMeta extends BaseMetaDefinition implements MetaResolver {
 
   @Override
   public @Nullable TypedExpression invokeMeta(@NotNull ExpressionTypechecker typechecker, @NotNull ContextData contextData) {
-    if (contextData.getExpectedType() != null) {
-      return typechecker.defer(new MetaDefinition() {
-        @Override
-        public @Nullable TypedExpression invokeMeta(@NotNull ExpressionTypechecker typechecker, @NotNull ContextData contextData) {
-          return typechecker.typecheck(RunMeta.this.getConcreteRepresentation(contextData), contextData.getExpectedType());
-        }
-      }, contextData, contextData.getExpectedType(), false);
-    } else {
-      return typechecker.typecheck(getConcreteRepresentation(contextData), contextData.getExpectedType());
-    }
+    return typechecker.typecheck(getConcreteRepresentation(contextData), contextData.getExpectedType());
   }
 
   @Override
